docs: modernize CI docs for releng/builder
Modernize CI docs (Java 17, Maven 3.9, new guides, deprecations). Update
and expand documentation to reflect current infrastructure and tooling:

README: add project summary, quick links, onboarding steps
index.rst: include new pages (getting-started, job-templates-overview,
	cloud-images)
jenkins.rst: replace obsolete carbon/openjdk8/mvn33 example with
	java-version (openjdk17) + mvn39; clarify simultaneous
	release jobs;
	add deprecation notes for CentOS 7;
	improve wording/spelling;
	remove legacy MaxPermSize;
	point to lf-* templates in global-jjb
cloud-images.rst: add context header, recommended current
	images, deprecation notice; rewrite intro for clarity/style
Add getting-started.rst (concise onboarding path)
Add job-templates-overview.rst with categorized templates,
	key parameters, override examples
General spelling/grammar fixes (simultaneous,
	virtualenvwrapper, trigger, overridden, rather, It is
	imperative)
Note Java 11 legacy support and Java 17 default
Encourage use of grouped lf-maven / lf-* jobs instead of verbose
legacy patterns

This brings docs in line with current builder configuration
(java-version parameters, Maven 3.8/3.9, deprecation of CentOS 7)
and reduces onboarding friction for new projects.

Change-Id: If6f06cdb1880afae4bfe5a291e00c27a28376136
Signed-off-by: Anil Belur <abelur@linuxfoundation.org>